potential spacing fix on services mobile page

--- a/sly-fox-collective/src/app/services/services.component.css
+++ b/sly-fox-collective/src/app/services/services.component.css
@@ -156,7 +156,7 @@
 
     .title-section {
         font-size: 4rem;
-        padding: 1.5rem 0;
+        padding: 0;
     }
 
     .services-container {
